# pproxy

./: README.md  __init__.py  cors.py  engine.py  intercept.py  matching.py  models.py  pyproject.toml  rules.json
adapters/: mitmproxy.py
gui/: __init__.py  __main__.py  server.py  store.py
gui/static/: index.html
loaders/: base.py  json_loader.py  yaml_loader.py
swiftbar/: pproxy.5s.py
tests/: test_cors.py  test_engine.py  test_gui_server.py  test_gui_store.py  test_matching.py  test_models.py  test_swiftbar_plugin.py  test_tray_config.py  test_tray_daemon.py  test_tray_editor.py  test_tray_proxy.py  test_tray_sysproxy.py
tray/: __init__.py  __main__.py  app.py  config.py  daemon.py  editor.py  paths.py  proxy.py  sysproxy.py
