[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pproxy"
version = "0.1.0"
description = "Poorman's proxy — URL pattern-based HTTP response interceptor for mitmproxy"
requires-python = ">=3.11"
dependencies = [
    "mitmproxy>=10.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
]
tray = [
    "rumps>=0.4; sys_platform == 'darwin'",
]

[tool.setuptools.packages.find]
include = ["pproxy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
